Fix scrollbar ugliness
Previously when scroll bars were visible, and depending on system
preferences, it could give parts of the page ugly white borders

--- a/ui/public/index.css
+++ b/ui/public/index.css
@@ -30,6 +30,15 @@
   --info-20: #d4e9f0;
 }
 
+html {
+  overflow: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
 body {
   width: 384px;
   height: 600px;
